--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -111,8 +111,8 @@
         </mat-card>
       </div>
 
-<!--      Multiple Choice-->
-      <ng-template>
+      <!--      Multiple Choice-->
+
         <div class='col-lg-7'>
           <mat-card>
             <div class='row  '>
@@ -135,6 +135,12 @@
             <mat-divider></mat-divider>
             <div class='row  mt-3'>
               <div class='col-12'>
+                <mat-form-field class='w-100'>
+                  <mat-label>Questionnaire Name</mat-label>
+                  <input matInput autocomplete='no' type='text' required>
+                </mat-form-field>
+              </div>
+              <div class='col-12'>
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
@@ -147,7 +153,11 @@
                 </mat-form-field>
               </div>
               <div class='col-12'>
-                <div class='row m-0 mt-2 mb-2'>
+                <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From
+                  scoring</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mt-4 mb-2'>
                   <mat-form-field class='w-100'>
                     <mat-label>Questions</mat-label>
                     <input matInput autocomplete='no' type='text' required>
@@ -178,7 +188,11 @@
                 </div>
               </div>
               <div class='col-12'>
-                <div class='row mt-2 mb-2'>
+                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showIcon' color='primary'><h4
+                  class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row mt-4 mb-2'>
                   <div class='col-3'><p class='text-muted'>POINTS</p></div>
                   <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
                 </div>
@@ -191,39 +205,19 @@
                     </mat-form-field>
                   </div>
                   <div class='col-9'>
-                    <div class='d-flex align-content-center'>
-                      <div class='skin-color mr-3'>
-                        <img class='img-fluid' src='https://img.pngio.com/blinkeze-eyelid-weights-fci-ophthalmics-skin-color-png-800_800.png' alt=''>
-                      </div>
-                      <div >
-                        <button mat-flat-button color="primary"  type="button"  >
-                          <mat-icon class="mr-2">upload</mat-icon>
-                          Upload
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class='col-12'>
-                <div class='row  mb-2'>
-                  <div class='offset-3'>
-                  </div>
-                  <div class='col-9' >
+
                     <mat-form-field class='w-100'>
-                      <mat-label>Title</mat-label>
+                      <mat-label>Answer 1</mat-label>
                       <input matInput autocomplete='no' type='text'>
                     </mat-form-field>
                   </div>
                 </div>
-              </div>
-              <div class='col-12'>
                 <div class='row  mb-2'>
                   <div class='offset-3'>
                   </div>
-                  <div class='col-9' >
+                  <div class='col-9' *ngIf='showIcon'>
                     <mat-form-field class='w-100'>
-                      <mat-label>Subtitle</mat-label>
+                      <mat-label>Font Awesome Icon 6 Code</mat-label>
                       <input matInput autocomplete='no' type='text'>
                     </mat-form-field>
                   </div>
@@ -237,8 +231,8 @@
             </div>
           </mat-card>
         </div>
-      </ng-template>
-<!--    Slider type-->
+
+      <!--    Slider type-->
       <ng-template>
         <div class='col-lg-7'>
           <mat-card>
@@ -372,6 +366,256 @@
                     <mat-form-field class='w-100'>
                       <mat-label>Answer 5</mat-label>
                       <input matInput autocomplete='no' placeholder='50% of my diet' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row'>
+                <button mat-button>ADD ANSWER</button>
+              </div>
+            </div>
+          </mat-card>
+        </div>
+      </ng-template>
+      <!--  image Upload-->
+      <ng-template>
+        <div class='col-lg-7'>
+          <mat-card>
+            <div class='row  '>
+              <div class='col-12'>
+                <div class='d-flex justify-content-between'>
+                  <h1>Questions 3</h1>
+                  <div class='row m-0' *ngIf='showSentiment'>
+                    <div class='d-flex sentiment'>
+                      <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
+                      <h2 class='m-0 icon--success'>-3</h2>
+                    </div>
+                    <div class='d-flex sentiment'>
+                      <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
+                      <h2 class='m-0 icon--error'>-2</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class='row  mt-3'>
+              <div class='col-12'>
+                <mat-form-field class='w-100' appearance='fill'>
+                  <mat-label>Type</mat-label>
+                  <mat-select>
+                    <mat-option value='one'>Multiple choice</mat-option>
+                    <mat-option value='two'>Image Select</mat-option>
+                    <mat-option value='two'>Yes/no</mat-option>
+                    <mat-option value='two'>Slider</mat-option>
+                    <mat-option value='two'>Vertical Select</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mt-2 mb-2'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Questions</mat-label>
+                    <input matInput autocomplete='no' type='text' required>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mb-2'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Description</mat-label>
+                    <textarea matInput
+                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showField' color='primary'><h4
+                  class='text-muted m-0  ml-2'>Why are we
+                  asking ?</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0  mt-4 mb-2'>
+                  <mat-form-field class='w-100' *ngIf='showField'>
+                    <mat-label>Why are we asking</mat-label>
+                    <textarea matInput
+                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row mt-2 mb-2'>
+                  <div class='col-3'><p class='text-muted'>POINTS</p></div>
+                  <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='col-3'>
+                    <mat-form-field class='w-100'>
+                      <input matInput autocomplete='no' type='text' required>
+                    </mat-form-field>
+                  </div>
+                  <div class='col-9'>
+                    <div class='d-flex align-content-center'>
+                      <div class='skin-color mr-3'>
+                        <img class='img-fluid'
+                             src='https://img.pngio.com/blinkeze-eyelid-weights-fci-ophthalmics-skin-color-png-800_800.png'
+                             alt=''>
+                      </div>
+                      <div>
+                        <button mat-flat-button color='primary' type='button'>
+                          <mat-icon class='mr-2'>upload</mat-icon>
+                          Upload
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='offset-3'>
+                  </div>
+                  <div class='col-9'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Title</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='offset-3'>
+                  </div>
+                  <div class='col-9'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Subtitle</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row'>
+                <button mat-button>ADD ANSWER</button>
+              </div>
+            </div>
+          </mat-card>
+        </div>
+      </ng-template>
+      <!--Yes no Type-->
+      <ng-template>
+        <div class='col-lg-7'>
+          <mat-card>
+            <div class='row  '>
+              <div class='col-12'>
+                <div class='d-flex justify-content-between'>
+                  <h1>Questions 1</h1>
+                  <div class='row m-0' *ngIf='showSentiment'>
+                    <div class='d-flex sentiment'>
+                      <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
+                      <h2 class='m-0 icon--success'>-3</h2>
+                    </div>
+                    <div class='d-flex sentiment'>
+                      <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
+                      <h2 class='m-0 icon--error'>-2</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class='row  mt-3'>
+              <div class='col-12'>
+                <mat-form-field class='w-100'>
+                  <mat-label>Questionnaire Name</mat-label>
+                  <input matInput autocomplete='no' type='text' required>
+                </mat-form-field>
+              </div>
+              <div class='col-12'>
+                <mat-form-field class='w-100' appearance='fill'>
+                  <mat-label>Type</mat-label>
+                  <mat-select>
+                    <mat-option value='one'>Multiple choice</mat-option>
+                    <mat-option value='two'>Image Select</mat-option>
+                    <mat-option value='two'>Yes/no</mat-option>
+                    <mat-option value='two'>Slider</mat-option>
+                    <mat-option value='two'>Vertical Select</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From
+                  scoring</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mt-4 mb-2'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Questions</mat-label>
+                    <input matInput autocomplete='no' type='text' required>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mb-2'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Description</mat-label>
+                    <textarea matInput
+                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showField' color='primary'><h4
+                  class='text-muted m-0  ml-2'>Why are we
+                  asking ?</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0  mt-4 mb-2'>
+                  <mat-form-field class='w-100' *ngIf='showField'>
+                    <mat-label>Why are we asking</mat-label>
+                    <textarea matInput
+                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showIcon' color='primary'><h4
+                  class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row mt-4 mb-2'>
+                  <div class='col-3'><p class='text-muted'>POINTS</p></div>
+                  <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='col-3'>
+                    <mat-form-field class='w-100'>
+                      <input matInput autocomplete='no' type='text' required>
+                    </mat-form-field>
+                  </div>
+                  <div class='col-9'>
+
+                    <mat-form-field class='w-100'>
+                      <mat-label>Answer 1</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row  mb-2'>
+                  <div class='offset-3'>
+                  </div>
+                  <div class='col-9' *ngIf='showIcon'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Font Awesome Icon 6 Code</mat-label>
+                      <input matInput autocomplete='no' type='text'>
                     </mat-form-field>
                   </div>
                 </div>
