--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -3,18 +3,18 @@
     <div class='row mb-4'>
       <div class='col-12 d-flex align-items-center justify-content-end'>
         <button
-          [disabled]='store.isActing$ | async'
+          [disabled]='(store.isActing$ | async)  || (store.isLoading$ | async)'
           mat-stroked-button type='button'
           [routerLink]="['/questionnaire']"
           class='ml-3'>
           Cancel
         </button>
         <button
-          [disabled]='store.isActing$ | async'
+          [disabled]='(store.isActing$ | async) || (store.isLoading$ | async)'
           mat-flat-button
           class='ml-3'
-          color='primary' type="submit">
-          Save
+          color='primary' type='submit'>
+          {{opType === operationTypeEnum.CREATE ? "Save" : "Update"}}
         </button>
       </div>
     </div>
@@ -50,15 +50,15 @@
                         <div class='d-flex align-items-center justify-content-between'>
                           <h4 class='mat-h4 mb-0 font-weight-bold'>Question {{i + 1}}</h4>
                           <div>
-                            <button mat-icon-button [matMenuTriggerFor]='menu'>
+                            <button type='button' mat-icon-button [matMenuTriggerFor]='menu'>
                               <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu='matMenu'>
-                              <button (click)='activeQuestion = i' mat-menu-item>
+                              <button type='button' (click)='activeQuestion = i' mat-menu-item>
                                 <mat-icon>create</mat-icon>
                                 <span>Edit</span>
                               </button>
-                              <button (click)='removeQuestion(i)' mat-menu-item>
+                              <button type='button' (click)='removeQuestion(i)' mat-menu-item>
                                 <mat-icon>delete</mat-icon>
                                 <span>Delete</span>
                               </button>
@@ -81,7 +81,8 @@
                     Add
                   </button>
                   <mat-menu #add='matMenu' class='mt-2'>
-                    <button (click)='triggerQuestionType(type)' *ngFor='let type of choiceTypeIte' mat-menu-item>
+                    <button type='button' (click)='triggerQuestionType(type)' *ngFor='let type of choiceTypeIte'
+                            mat-menu-item>
                       <span>{{type}}</span>
                     </button>
                   </mat-menu>
