--- a/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
+++ b/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
@@ -59,10 +59,29 @@
                   *matHeaderCellDef> {{constantDataService.FIELD_NAME.STATUS | titlecase}} </th>
               <td mat-cell *matCellDef='let element'>
                 <hidden-innovation-common-data-field-status
-                  *ngIf='!!element.isScoring'
-                  [chipType]='element.isScoring ? statusChipType.SUCCESS : statusChipType.WARNING'
-                  [text]='((element.isScoring ? userStatusEnum.ACTIVE : userStatusEnum.BLOCKED)  | titlecase)'
+                  [chipType]='element.isActive ? statusChipType.SUCCESS : statusChipType.WARNING'
+                  [text]='((element.isActive ? userStatusEnum.ACTIVE : userStatusEnum.INACTIVE)  | titlecase)'
                 ></hidden-innovation-common-data-field-status>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef='action'>
+              <th mat-header-cell *matHeaderCellDef
+                  [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+              <td mat-cell *matCellDef='let row'>
+                <button mat-icon-button [matMenuTriggerFor]='userListMenu'>
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #userListMenu='matMenu'>
+                  <button mat-menu-item [routerLink]='["/questionnaire", "edit", row?.id]'>
+                    <mat-icon>create</mat-icon>
+                    <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
+                  </button>
+                  <button (click)='store.toggleActive(row.id, row.isActive)' mat-menu-item [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'>
+                    <mat-icon>{{row.isActive ? "block" : "check_circle_outline"}}</mat-icon>
+                    <span>{{(row.isActive ? constantDataService.BUTTON_NAME.DEACTIVATE : constantDataService.BUTTON_NAME.ACTIVATE) | titlecase}}</span>
+                  </button>
+                </mat-menu>
               </td>
             </ng-container>
 
