--- a/libs/shared/ui/questionnaire-question-form/src/lib/questionnaire-question-form.component.html
+++ b/libs/shared/ui/questionnaire-question-form/src/lib/questionnaire-question-form.component.html
@@ -138,7 +138,7 @@
                   <ng-template [ngIf]='imageAnswerGroup(i).controls.imageId.valid' [ngIfElse]='imageSelectedElse'>
                     <div class='col-2'>
                       <img class='img-fluid'
-                           src='{{imageAnswerGroup(i).controls.image?.value}}'
+                           src='{{imageAnswerGroup(i).controls.imageBlob?.value}}'
                            [ngStyle]='{"maxHeight": "51px"}'>
                     </div>
                     <div class='col'>
