--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -1,10 +1,117 @@
 <hidden-innovation-test-tab-group></hidden-innovation-test-tab-group>
 <div class='p-4'>
+
+  <div class='container-fluid p-0'>
+    <div class='row'>
+      <div class='col-3'>
+        <mat-form-field class='w-100'>
+          <mat-label>Search</mat-label>
+          <input matInput>
+          <button mat-icon-button matSuffix *ngIf='false'>
+            <mat-icon style='font-size: 14px'>close</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <div class='col d-flex align-items-center justify-content-end'>
+        <mat-spinner class='mr-4' [diameter]='20' *ngIf='true'></mat-spinner>
+        <button mat-flat-button color='primary' class='ml-2'>
+          <mat-icon class='mr-2'>add</mat-icon>
+          {{"Add Test"}}
+        </button>
+      </div>
+    </div>
+  </div>
+
   <mat-card class='p-0'>
     <div class='container-fluid p-0'>
       <div class='row'>
         <div class='col-12'>
-          <span>Test Single</span>
+          <table mat-table [dataSource]='tests' class='w-100'>
+
+            <ng-container matColumnDef='id'>
+              <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
+              <td mat-cell *matCellDef='let element'> {{element.id ?? '--'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef='name'>
+              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.NAME | titlecase}} </th>
+              <td mat-cell *matCellDef='let element'
+                  [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef='updated_at'>
+              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.DATE_ADDED | titlecase}}</th>
+              <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef='category'>
+              <th mat-header-cell
+                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.CATEGORY | titlecase}} </th>
+              <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef='difficulty'>
+              <th mat-header-cell
+                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.DIFFICULTY | titlecase}} </th>
+              <td mat-cell *matCellDef='let element'> {{((element.difficulty | titlecase) || '--')}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef='input'>
+              <th mat-header-cell
+                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.INPUTS | slice: 0: 5 | titlecase}} </th>
+              <td mat-cell *matCellDef='let element'> {{(element.input || '--')}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef='status'>
+              <th mat-header-cell
+                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.STATUS | titlecase}} </th>
+              <td mat-cell *matCellDef='let element'>
+                <hidden-innovation-common-data-field-status
+                  [chipType]='element.status ? statusChipType.SUCCESS : statusChipType.WARNING'
+                  [text]='((element.status ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
+                ></hidden-innovation-common-data-field-status>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef='action'>
+              <th mat-header-cell *matHeaderCellDef
+                  [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+              <td mat-cell *matCellDef='let row'>
+                <button mat-icon-button [matMenuTriggerFor]='testListMenu'>
+                  <mat-icon>more_vert</mat-icon>
+                </button>
+                <mat-menu #testListMenu='matMenu'>
+                  <button mat-menu-item>
+                    <mat-icon>create</mat-icon>
+                    <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
+                  </button>
+                  <button mat-menu-item>
+                    <mat-icon>delete</mat-icon>
+                    <span>{{constantDataService.BUTTON_NAME.DELETE | titlecase}}</span>
+                  </button>
+                </mat-menu>
+              </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+            <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
+          </table>
+        </div>
+      </div>
+      <ng-template [ngIf]='true' [ngIfElse]='noDataElse'></ng-template>
+      <ng-template #noDataElse>
+        <div class='row'>
+          <div class='col-12 d-flex align-items-center justify-content-center'>
+            <h4 class='mat-h4 mb-0 my-2 font-calibri' *ngIf='noData | async'>No Results Found</h4>
+          </div>
+        </div>
+      </ng-template>
+      <div class='row mt-2'>
+        <div class='col'></div>
+        <div class='col-6'>
+          <mat-paginator
+            [pageSize]='pageSize' [length]='5' [pageIndex]='paginatorIndex'
+            [pageSizeOptions]='pageSizeOptions'></mat-paginator>
         </div>
       </div>
     </div>
