--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -34,37 +34,142 @@
             </ng-container>
 
             <ng-container matColumnDef='name'>
-              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.NAME | titlecase}} </th>
+              <th mat-header-cell *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.NAME | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <mat-icon
+                      style='font-size: 16px; margin-bottom: -8px; width: 16px;'>{{true ? "keyboard_arrow_up" : "keyboard_arrow_down"}}</mat-icon>
+                    <button mat-icon-button class='mr-3'>
+                      <mat-icon style='font-size: 20px'>sort_by_alpha</mat-icon>
+                    </button>
+                  </div>
+                </div>
+              </th>
               <td mat-cell *matCellDef='let element'
                   [matTooltip]='element.name'> {{(element.name | maxStringLimit) || '--'}} </td>
             </ng-container>
 
             <ng-container matColumnDef='updated_at'>
-              <th mat-header-cell *matHeaderCellDef> {{constantDataService.FIELD_NAME.DATE_ADDED | titlecase}}</th>
+              <th mat-header-cell *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.DATE_ADDED | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3'>
+                      <mat-icon
+                        style='font-size: 20px;'>{{true ? "arrow_upward" : "arrow_downward"}}</mat-icon>
+                    </button>
+                  </div>
+                </div>
+
+              </th>
               <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
             </ng-container>
 
             <ng-container matColumnDef='category'>
               <th mat-header-cell
-                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.CATEGORY | titlecase}} </th>
+                  *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.CATEGORY | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'>
+                      <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                    </button>
+                    <mat-menu #typeMenu='matMenu'>
+                      <mat-selection-list color='primary'
+                                          [multiple]='true' class='pt-0'>
+                        <mat-list-option *ngFor='let cat of tagCategoryIte' [value]='cat'>
+                          <h6 class='mat-h6'>{{cat | replaceUnderscore | titlecase}}</h6>
+                        </mat-list-option>
+                      </mat-selection-list>
+                    </mat-menu>
+                  </div>
+                </div>
+              </th>
               <td mat-cell *matCellDef='let element'> {{((element.category | titlecase) || '--')}} </td>
             </ng-container>
 
             <ng-container matColumnDef='difficulty'>
               <th mat-header-cell
-                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.DIFFICULTY | titlecase}} </th>
+                  *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.DIFFICULTY | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3' [matMenuTriggerFor]='difficultyMenu'>
+                      <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                    </button>
+                    <mat-menu #difficultyMenu='matMenu'>
+                      <mat-selection-list color='primary'
+                                          [multiple]='true' class='pt-0'>
+                        <mat-list-option *ngFor='let diffType of difficultyIte' [value]='diffType'>
+                          <h6 class='mat-h6'>{{diffType | replaceUnderscore | titlecase}}</h6>
+                        </mat-list-option>
+                      </mat-selection-list>
+                    </mat-menu>
+                  </div>
+                </div>
+              </th>
               <td mat-cell *matCellDef='let element'> {{((element.difficulty | titlecase) || '--')}} </td>
             </ng-container>
 
             <ng-container matColumnDef='input'>
               <th mat-header-cell
-                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.INPUTS | slice: 0: 5 | titlecase}} </th>
+                  *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.INPUTS | slice: 0: 5 | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3' [matMenuTriggerFor]='inputTypeMenu'>
+                      <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                    </button>
+                    <mat-menu #inputTypeMenu='matMenu'>
+                      <mat-selection-list color='primary'
+                                          [multiple]='true' class='pt-0'>
+                        <mat-list-option *ngFor='let type of testInputTypeIte' [value]='type'>
+                          <h6 class='mat-h6'>{{type | replaceUnderscore | titlecase}}</h6>
+                        </mat-list-option>
+                      </mat-selection-list>
+                    </mat-menu>
+                  </div>
+                </div>
+              </th>
               <td mat-cell *matCellDef='let element'> {{(element.input || '--')}} </td>
             </ng-container>
 
             <ng-container matColumnDef='status'>
               <th mat-header-cell
-                  *matHeaderCellDef> {{constantDataService.FIELD_NAME.STATUS | titlecase}} </th>
+                  *matHeaderCellDef>
+                <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                  </span>
+                  <div class='d-flex align-items-center'>
+                    <button mat-icon-button class='mr-3' [matMenuTriggerFor]='statusMenu'>
+                      <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                    </button>
+                    <mat-menu #statusMenu='matMenu'>
+                      <mat-selection-list color='primary'
+                                          [multiple]='false' class='pt-0'>
+                        <mat-list-option [value]='true'>
+                          <h6 class='mat-h6'>{{publishStatusEnum.PUBLISHED | titlecase}}</h6>
+                        </mat-list-option>
+                        <mat-list-option [value]='false'>
+                          <h6 class='mat-h6'>{{publishStatusEnum.UNPUBLISHED | titlecase}}</h6>
+                        </mat-list-option>
+                      </mat-selection-list>
+                    </mat-menu>
+                  </div>
+                </div>
+              </th>
               <td mat-cell *matCellDef='let element'>
                 <hidden-innovation-common-data-field-status
                   [chipType]='element.status ? statusChipType.SUCCESS : statusChipType.WARNING'
@@ -75,7 +180,7 @@
 
             <ng-container matColumnDef='action'>
               <th mat-header-cell *matHeaderCellDef
-                  [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+                  [width]='30'></th>
               <td mat-cell *matCellDef='let row'>
                 <button mat-icon-button [matMenuTriggerFor]='testListMenu'>
                   <mat-icon>more_vert</mat-icon>
