--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -91,8 +91,8 @@
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.items'> {{(element.items | maxStringLimit) || '--'}} </td>
                   </ng-container>
-                  <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
+                  <tr mat-header-row *matHeaderRowDef='displayedColumns' ></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react' (click)='hello(row.screen)'></tr>
                 </table>
               </div>
             </div>
